--- a/index/index.html
+++ b/index/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>لعبة بالونات الأرقام</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Math Balloon Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🎈 لعبة بالونات الأرقام 🎈</h1>
-    <div id="score">النقاط: 0 | المحاولات: 3</div>
-    <div id="question">؟</div>
-    <canvas id="gameCanvas"></canvas>
-    <script src="script.js"></script>
+  <!-- Start Screen -->
+  <div id="start-screen" class="screen">
+    <h1>🎈 Welcome to Math Balloon Game!</h1>
+    <p>Solve math problems and pop the correct balloon before it falls.</p>
+    <button id="start-btn">Start Game</button>
+  </div>
+
+  <!-- Game Screen -->
+  <div id="game-screen" class="screen hidden">
+    <h2 id="question">Question appears here</h2>
+    <canvas id="gameCanvas" width="600" height="400"></canvas>
+    <p id="score">Score: 0</p>
+  </div>
+
+  <!-- End Screen -->
+  <div id="end-screen" class="screen hidden">
+    <h1 id="end-message"></h1>
+    <p id="final-score"></p>
+    <button id="restart-btn">Play Again</button>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
