--- a/index.html
+++ b/index.html
@@ -2,38 +2,139 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Math Challenge Game</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Balloon Pop Game</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to top, #87ceeb, #ffffff);
+    }
+
+    #gameContainer {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .balloon {
+      position: absolute;
+      width: 60px;
+      height: 80px;
+      background: red;
+      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+      cursor: pointer;
+    }
+
+    #startScreen, #endScreen {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 24px;
+      z-index: 10;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-top: 20px;
+      font-size: 20px;
+      border: none;
+      border-radius: 10px;
+      background: #ff4081;
+      color: white;
+      cursor: pointer;
+    }
+
+    #scoreBoard {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 24px;
+      color: #333;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <!-- Start Screen -->
-  <div id="start-screen">
-    <h1>Welcome to Math Challenge!</h1>
-    <p>Test your brain with fun math questions 🎯</p>
-    <button onclick="startGame()">Start Game</button>
+  <div id="gameContainer">
+    <div id="scoreBoard">Score: 0</div>
+    <div id="startScreen">
+      <h1>🎈 Welcome to Balloon Pop 🎈</h1>
+      <p>Click the balloons to pop them before time runs out!</p>
+      <button onclick="startGame()">Start Game</button>
+    </div>
+    <div id="endScreen" style="display: none;">
+      <h1 id="endMessage"></h1>
+      <p id="finalScore"></p>
+      <button onclick="startGame()">Play Again</button>
+    </div>
   </div>
 
-  <!-- Game Screen -->
-  <div id="game" style="display:none;">
-    <h2>Solve the Question:</h2>
-    <p id="question"></p>
-    <input type="text" id="answer" placeholder="Your answer">
-    <button onclick="checkAnswer()">Submit</button>
-  </div>
+  <script>
+    const gameContainer = document.getElementById("gameContainer");
+    const scoreBoard = document.getElementById("scoreBoard");
+    const startScreen = document.getElementById("startScreen");
+    const endScreen = document.getElementById("endScreen");
+    const endMessage = document.getElementById("endMessage");
+    const finalScore = document.getElementById("finalScore");
 
-  <!-- Win Screen -->
-  <div id="win-screen" style="display:none;">
-    <h2>🎉 Congratulations! You Won! 🎉</h2>
-    <button onclick="restartGame()">Play Again</button>
-  </div>
+    let score = 0;
+    let gameInterval;
+    let gameDuration = 20000; // 20 seconds
 
-  <!-- Lose Screen -->
-  <div id="lose-screen" style="display:none;">
-    <h2>❌ Game Over! Try Again ❌</h2>
-    <button onclick="restartGame()">Retry</button>
-  </div>
+    function randomColor() {
+      const colors = ["red", "blue", "green", "yellow", "purple", "orange", "pink"];
+      return colors[Math.floor(Math.random() * colors.length)];
+    }
 
-  <script src="script.js"></script>
-</body>
-</html>
+    function createBalloon() {
+      const balloon = document.createElement("div");
+      balloon.classList.add("balloon");
+      balloon.style.left = Math.random() * (window.innerWidth - 60) + "px";
+      balloon.style.background = randomColor();
+      balloon.style.bottom = "0px";
+
+      balloon.addEventListener("click", () => {
+        score++;
+        scoreBoard.innerText = "Score: " + score;
+        balloon.remove();
+      });
+
+      gameContainer.appendChild(balloon);
+
+      let moveInterval = setInterval(() => {
+        let bottom = parseInt(balloon.style.bottom);
+        if (bottom > window.innerHeight) {
+          balloon.remove();
+          clearInterval(moveInterval);
+        } else {
+          balloon.style.bottom = bottom + 2 + "px";
+        }
+      }, 20);
+    }
+
+    function startGame() {
+      score = 0;
+      scoreBoard.innerText = "Score: " + score;
+      startScreen.style.display = "none";
+      endScreen.style.display = "none";
+
+      gameInterval = setInterval(createBalloon, 800);
+
+      setTimeout(endGame, gameDuration);
+    }
+
+    function endGame() {
+      clearInterval(gameInterval);
+      document.querySelectorAll(".balloon").forEach(b => b.remove());
+
+      if (score >= 15) {
+        endMessage.innerText = "🎉 You Win! 🎉";
